Web Locks API: query() needs callback even if origin is empty

Issue reported by canary dogfooder: the promise returned by
navigator.locks.query() would never resolve if no locks were held. In
debug builds, this would DCHECK. The code would early-exit without
running the callback in this case - a no-no.

Added fix (return empty arrays) and test case.

Bug: 807070
Change-Id: Ib4abd5d861c5ab259f7ea00355aebd006438508e
Reviewed-on: https://chromium-review.googlesource.com/891584
Commit-Queue: Joshua Bell <jsbell@chromium.org>
Reviewed-by: Victor Costan <pwnall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533184}
Former-commit-id: 41cfa934f0cc71ae5ef3b59622add0a6b963fcb1